--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@use "sass:map"
+
+body
+  color: white
+
+.back
+  background: #001F33
+
+.full
+  height: 100%
+
+.bv
+  color: white
+
+.header
+  display: inline-flex
+
+label
+  color: #F8A200
+  font-weight: bold
+
+.formulario
+  text-align: center
+
+.buttonPaiParaFilho
+  background-color: #F8A200
+  color: white
+  border-radius: 25px
